@@ -385,6 +385,13 @@ static CCTexture2DPixelFormat defaultAlphaPixelFormat_ = kCCTexture2DPixelFormat
 	colorSpace = CGColorSpaceCreateDeviceGray();
 	data = calloc(height, width);
 	context = CGBitmapContextCreate(data, width, height, 8, width, colorSpace, kCGImageAlphaNone);
+	
+	if( ! context ) {
+		free(data);
+		[self release];
+		return nil;
+	}
+	
 	CGColorSpaceRelease(colorSpace);
 	
 	
