@@ -4,7 +4,7 @@ version 0.99.5-beta3 xx-Sep-2010
 	Node: position is in Points. Use positionInPixels for pixles
 	Node: contentSize is in Points. Use contentSizeInPixels for pixels
 	Texture2d: contentSize is in Points. Use contentSizeInPixels for pixels
-	FileUtils: Will try to load the file with the suffix "-hd" if RetinaDisplay is enabled
+	FileUtils: Will try to load the file with the suffix "-hd" if RetinaDisplay is enabled, unless the "-hd" suffix is already present
 	The following objects were enhanced to work with points:
 		TMXTileMap, Sprite, SpriteFrame, Node, ParticleSystem, LabelBMFont, LabelTTF, Menu, MenuItem,
 		ColorLayer, RenderTexture, MotionStreak, Transitions, Actions, LabelAtlas, AtlasNode.
@@ -12,6 +12,7 @@ version 0.99.5-beta3 xx-Sep-2010
  . [FIX] CCArray: improved speed in inserting and deleting elements
  . [FIX] Templates: Default SDK is 4.1
  . [FIX] Texture2d: Fixed possible crash in NPOT PVR images
+ . [FIX] Texture2d: If Text in context can't be created return nil (prevent possible crash)
  . [FIX] Texture2d: Optimized loading time of PVR images
  
 version 0.99.5-beta2 31-Ago-2010
